# suprawall-plugins-

./: .gitignore  LICENSE  README.md
.github/workflows/: publish.yml
langchain-py/: README.md  pyproject.toml
langchain-py/langchain_suprawall/: __init__.py  callbacks.py
llama-index/llama_index_suprawall/: __init__.py  base.py
mcp-plugin/: README.md  marketplace.json  package.json
mcp-plugin/.github/workflows/: publish.yml
mcp-plugin/docs/: installation.md
mcp-plugin/examples/: basic-usage.md  langchain-example.py  vault-setup.md
mcp-plugin/src/: index.ts  server.ts
openclaw/: README.md  package.json  tsconfig.json
openclaw/src/: index.ts
paperclip/: README.md  package-lock.json  package.json
paperclip-templates/suprawall-secured-starter/: .env.example  README.md  company.json
paperclip-templates/suprawall-secured-starter/agents/: ceo.json  engineering.json  finance.json  marketing.json
paperclip/src/: client.ts  index.ts  skill.json  types.ts
suprawall-security/: .env.example  README.md  main.py  manifest.yaml  package_log.txt  privacy_policy.md  requirements.txt
suprawall-security/provider/: suprawall.yaml
suprawall-security/tools/: enforce.py  enforce.yaml  scan.py  scan.yaml
